environments/dev/openwallet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: openwallet
  name: openwallet-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "open-wallet-ip"
spec:
  ingressClassName: gce
  rules:
  - host: openwallet2025.com
    http:
      paths:
      - path: /
        pathType: Prefix # /로 시작하는 모든 요청 (/, /about, /images 등)
        backend:
          service:
            name: front-server
            port:
              number: 80
